# bobateashop

./: .gitignore  LESSONS_LEARNED.md  PRODUCT_QUALITY_ASSESSMENT.md  QUICKSTART.md  QUICK_START.md  RETROSPECTIVE_AGENDA.md  RETROSPECTIVE_SURVEY.md  RUN_INSTRUCTIONS.md  TESTING_AUTH.md  package-lock.json  readme.md
back-end/: .env.example  README.md  main.py  pyproject.toml  requirements.txt
back-end/__MACOSX/: ._back-end
back-end/__MACOSX/back-end/: ._scripts
back-end/__MACOSX/back-end/app/routes/: ._meta_routes.py
back-end/__MACOSX/back-end/app/utils/: .___init__.py
back-end/app/: __init__.py  config.py
back-end/app/db/: __init__.py  models.py  seed.py
back-end/app/routes/: auth_routes.py  employees_routes.py  inventory_routes.py  meta_routes.py  orders_routes.py  products_routes.py  reports_routes.py  translate_routes.py
back-end/app/schemas/: __init__.py  common.py  employee_schemas.py  inventory_schemas.py  meta.py  order_schemas.py  product_schemas.py  report_schemas.py
back-end/app/services/: auth_service.py  employees_service.py  inventory_service.py  orders_service.py  products_service.py  reports_service.py
back-end/app/utils/: errors.py
back-end/docs/: AUTHENTICATION_SETUP.md  BUGFIX.md  DATABASE_MIGRATION.md  GOOGLE_TRANSLATE_SETUP.md  MIGRATION_COMPLETE.md  SETUP_GUIDE.md  TRANSLATION_IMPLEMENTATION.md
back-end/instance/: pos_dev.db
back-end/migrations/: 001_create_users_table.sql
back-end/scripts/: create_users_table.py  create_users_table.sh  seed.py
back-end/tests/: test_db_connection.py
front-end/: .env  package-lock.json  (+2 more)
(+37 files in other folders)
